--- a/2.1-(mini-project)-the-code-magazine/index.html
+++ b/2.1-(mini-project)-the-code-magazine/index.html
@@ -13,7 +13,8 @@
     <p>Posted by <b>Laura Jones</b> on Monday, June 21st 2027</p>
 
     <p>
-      All modern websites and web applications are built using three <i>fundamental</i>
+      All modern websites and web applications are built using three
+      <i>fundamental</i>
       technologies: HTML, CSS and JavaScript. These are the languages of the
       web.
     </p>
@@ -24,11 +25,15 @@
     </p>
 
     <h3>What is HTML?</h3>
-
+    <ol type="1">
+      <li>The opening tag</li>
+      <li>The closing tag</li>
+      <li>The actual element</li>
+    </ol>
     <p>
-      HTML stands for <b>H</b>yper<b>T</b>ext <b>M</b>arkup <b>L</b>anguage. It's a markup language that web
-      developers use to structure and describe the content of a webpage (not a
-      programming language).
+      HTML stands for <b>H</b>yper<b>T</b>ext <b>M</b>arkup <b>L</b>anguage.
+      It's a markup language that web developers use to structure and describe
+      the content of a webpage (not a programming language).
     </p>
 
     <p>
@@ -47,6 +52,17 @@
       There are countless reasons for learning the fundamental language of the
       web. Here are 5 of them:
     </p>
+
+    <ul>
+      <li>To be able to use the fundamental web dev language</li>
+      <li>
+        To hand-craft beautiful websites instead of relying on tools like
+        Worpress or Wix
+      </li>
+      <li>To build web applications</li>
+      <li>To impress friends</li>
+      <li>To have fun 😃</li>
+    </ul>
 
     <p>Hopefully you learned something new here. See you next time!</p>
   </body>
