Learn HTML and CSS

--- a/2.1-(mini-project)-the-code-magazine/index.html
+++ b/2.1-(mini-project)-the-code-magazine/index.html
@@ -8,9 +8,25 @@
   <body>
     <h1>📗 The Code Magazine</h1>
 
+    <a href="#">Blog</a>
+    <a href="#">Challenges</a>
+    <a href="#">Flexbox</a>
+    <a href="#">CSS Grid</a>
+
     <h2>The Basic Language of the Web: HTML</h2>
 
+    <img
+      src="https://raw.githubusercontent.com/jonasschmedtmann/html-css-course/master/final/02-HTML-Fundamentals/img/laura-jones.jpg"
+      alt="Face of Laura Jones" width="50px"
+    />
+
     <p>Posted by <b>Laura Jones</b> on Monday, June 21st 2027</p>
+
+    <img
+      src="https://raw.githubusercontent.com/jonasschmedtmann/html-css-course/master/final/02-HTML-Fundamentals/img/post-img.jpg"
+      alt="Code-Image"
+      width="500px"
+    />
 
     <p>
       All modern websites and web applications are built using three
@@ -44,7 +60,7 @@
 
     <p>In HTML, each element is made up of 3 parts:</p>
 
-    <p>You can learn more at the MDN Web Docs.</p>
+    <p>You can learn more at the <a href="#">MDN Web Docs</a>.</p>
 
     <h3>Why should you learn HTML?</h3>
 
