--- a/3-CSS-fundamentals/challenges/challenge-1.html
+++ b/3-CSS-fundamentals/challenges/challenge-1.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS - Challenge 1</title>
+
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
     <header>
@@ -90,7 +92,7 @@
     </div>
 
     <aside>
-      <h3>Related Posts</h3>
+      <h4>Related Posts</h4>
       <ul>
         <li>
           <img
