Learn HTML and CSS

--- a/3-CSS-fundamentals/challenges/challenge-1.html
+++ b/3-CSS-fundamentals/challenges/challenge-1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS - Challenge 1</title>
 
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <header>
@@ -20,15 +20,17 @@
     </header>
 
     <div>
-      <h2>The Basic Language of the Web: HTML</h2>
+      <header>
+        <h2>The Basic Language of the Web: HTML</h2>
 
-      <img
-        src="https://raw.githubusercontent.com/jonasschmedtmann/html-css-course/master/final/02-HTML-Fundamentals/img/laura-jones.jpg"
-        alt="Face of Laura Jones"
-        width="50px"
-      />
+        <img
+          src="https://raw.githubusercontent.com/jonasschmedtmann/html-css-course/master/final/02-HTML-Fundamentals/img/laura-jones.jpg"
+          alt="Face of Laura Jones"
+          width="50px"
+        />
 
-      <p>Posted by <b>Laura Jones</b> on Monday, June 21st 2027</p>
+        <p>Posted by <b>Laura Jones</b> on Monday, June 21st 2027</p>
+      </header>
 
       <img
         src="https://raw.githubusercontent.com/jonasschmedtmann/html-css-course/master/final/02-HTML-Fundamentals/img/post-img.jpg"
