Learn HTML and CSS

--- a/3-CSS-fundamentals/challenges/challenge-1.html
+++ b/3-CSS-fundamentals/challenges/challenge-1.html
@@ -29,7 +29,7 @@
           width="50px"
         />
 
-        <p>Posted by <b>Laura Jones</b> on Monday, June 21st 2027</p>
+        <p class="" id="author">Posted by <b>Laura Jones</b> on Monday, June 21st 2027</p>
       </header>
 
       <img
@@ -96,32 +96,32 @@
     <aside>
       <h4>Related Posts</h4>
       <ul>
-        <li>
+        <li class="related-post">
           <img
             src="https://raw.githubusercontent.com/jonasschmedtmann/html-css-course/master/final/02-HTML-Fundamentals/img/related-1.jpg"
             width="50px"
           /><a href="#">How to Learn Web Development</a><br />
-          <p>By Jonas Schmedtmann</p>
+          <p class="related-author">By Jonas Schmedtmann</p>
         </li>
-        <li>
+        <li class="related-post">
           <img
             src="https://raw.githubusercontent.com/jonasschmedtmann/html-css-course/master/final/02-HTML-Fundamentals/img/related-2.jpg"
             width="50px"
           /><a href="#">The Unknown Power of CSS</a><br />
-          <p>By Jim Dillon</p>
+          <p class="related-author">By Jim Dillon</p>
         </li>
-        <li>
+        <li class="related-post">
           <img
             src="https://raw.githubusercontent.com/jonasschmedtmann/html-css-course/master/final/02-HTML-Fundamentals/img/related-3.jpg"
             width="50px"
           /><a href="#">Why JavaScript is Awesome</a><br />
-          <p>By Matilda</p>
+          <p class="related-author">By Matilda</p>
         </li>
       </ul>
     </aside>
 
     <footer>
-      <p>Copyright &copy; 2027 by The Code-Magazine</p>
+      <p class="copy">Copyright &copy; 2027 by The Code-Magazine</p>
     </footer>
   </body>
 </html>
