Learn HTLM and CSS

--- a/3-CSS-fundamentals/challenges/challenge-1.html
+++ b/3-CSS-fundamentals/challenges/challenge-1.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="main-header">
       <h1>📗 The Code Magazine</h1>
 
       <div>
@@ -30,13 +30,13 @@
         />
 
         <p class="" id="author">Posted by <b>Laura Jones</b> on Monday, June 21st 2027</p>
-      </header>
-
-      <img
+        
+        <img
         src="https://raw.githubusercontent.com/jonasschmedtmann/html-css-course/master/final/02-HTML-Fundamentals/img/post-img.jpg"
         alt="Code-Image"
         width="500px"
-      />
+        />
+      </header>
 
       <p>
         All modern websites and web applications are built using three
