Learn HTML and CSS

--- a/3-CSS-fundamentals/challenges/challenge-1.html
+++ b/3-CSS-fundamentals/challenges/challenge-1.html
@@ -12,10 +12,10 @@
       <h1>📗 The Code Magazine</h1>
 
       <div>
-        <a href="#">Blog</a>
-        <a href="#">Challenges</a>
-        <a href="#">Flexbox</a>
-        <a href="#">CSS Grid</a>
+        <a href="testing.html">Blog</a>
+        <a href="testing.html">Challenges</a>
+        <a href="testing.html">Flexbox</a>
+        <a href="testing.html">CSS Grid</a>
       </div>
     </header>
 
@@ -70,7 +70,7 @@
 
       <p>In HTML, each element is made up of 3 parts:</p>
 
-      <p>You can learn more at the <a href="#">MDN Web Docs</a>.</p>
+      <p>You can learn more at the <a href="testing.html">MDN Web Docs</a>.</p>
 
       <h3>Why should you learn HTML?</h3>
 
@@ -100,21 +100,21 @@
           <img
             src="https://raw.githubusercontent.com/jonasschmedtmann/html-css-course/master/final/02-HTML-Fundamentals/img/related-1.jpg"
             width="50px"
-          /><a href="#">How to Learn Web Development</a><br />
+          /><a href="testing.html">How to Learn Web Development</a><br />
           <p class="related-author">By Jonas Schmedtmann</p>
         </li>
         <li class="related-post">
           <img
             src="https://raw.githubusercontent.com/jonasschmedtmann/html-css-course/master/final/02-HTML-Fundamentals/img/related-2.jpg"
             width="50px"
-          /><a href="#">The Unknown Power of CSS</a><br />
+          /><a href="testing.html">The Unknown Power of CSS</a><br />
           <p class="related-author">By Jim Dillon</p>
         </li>
         <li class="related-post">
           <img
             src="https://raw.githubusercontent.com/jonasschmedtmann/html-css-course/master/final/02-HTML-Fundamentals/img/related-3.jpg"
             width="50px"
-          /><a href="#">Why JavaScript is Awesome</a><br />
+          /><a href="testing.html">Why JavaScript is Awesome</a><br />
           <p class="related-author">By Matilda</p>
         </li>
       </ul>
