--- a/index.html
+++ b/index.html
@@ -1,11 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Learn HTML and CSS</title>
-</head>
-<body>
+  <title></title>
+
+
+  <!--=============== FAVICON ===============-->
+  <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+
+  <!--=============== REMIX ICONS ===============-->
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
   
+  <!--=============== CSS ===============-->
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+
+<body>
+  <!--==================== HEADER ====================-->
+  <header class="header" id="header">
+    <nav class="nav container">
+      <a href="#" class="nav__logo">
+        <i class="ri-code-line nav__logo-icon"></i> Janit's Learning
+      </a>
+
+      <div class="nav__menu" id="nav-menu">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#home" class="nav__link active-link">Home</a>
+          </li>
+          <li class="nav__item">
+            <a href="#about" class="nav__link">About</a>
+          </li>
+          <li class="nav__item">
+            <a href="#products" class="nav__link">Products</a>
+          </li>
+          <li class="nav__item">
+            <a href="#faqs" class="nav__link">FAQs</a>
+          </li>
+          <li class="nav__item">
+            <a href="#contact" class="nav__link">Contact Us</a>
+          </li>
+        </ul>
+
+        <div class="nav__close" id="nav-close">
+          <i class="ri-close-line"></i>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <main class="main">
+    <!--==================== HOME ====================-->
+    <section class="home" id="home">
+      <div class="home__container container grid">
+        <img src="assets/image/hero.png" alt="" class="home__img">
+
+        <div class="home__data">
+          <h1 class="home__title">
+            Only practice<br> makes perfect
+          </h1>
+          <p class="home__description">
+            Create incredible plant design for your offices or apastaments.
+            Add fresness to your new ideas.
+          </p>
+          <a href="#about" class="button button--flex">
+            Explore <i class="ri-arrow-right-down-line button__icon"></i>
+          </a>
+        </div>
+
+        <div class="home__social">
+          <span class="home__social-follow">Follow Us</span>
+
+          <div class="home__social-links">
+            <a href="https://www.facebook.com/" target="_blank" class="home__social-link">
+              <i class="ri-facebook-fill"></i>
+            </a>
+            <a href="https://www.instagram.com/" target="_blank" class="home__social-link">
+              <i class="ri-instagram-line"></i>
+            </a>
+            <a href="https://twitter.com/" target="_blank" class="home__social-link">
+              <i class="ri-twitter-fill"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--==================== ABOUT ====================-->
+    <section class="about section container" id="about">
+      <div class="about__container grid">
+        <img src="assets/image/about.png" alt="" class="about__img">
+
+        <div class="about__data">
+          <h2 class="section__title about__title">
+            Who we really are & <br> why choose us
+          </h2>
+
+          <p class="about__description">
+            We have over 4000+ unbiased reviews and our customers
+            trust our plant process and delivery service every time
+          </p>
+
+          <div class="about__details">
+            <p class="about__details-description">
+              <i class="ri-checkbox-fill about__details-icon"></i>
+              We always deliver on time.
+            </p>
+            <p class="about__details-description">
+              <i class="ri-checkbox-fill about__details-icon"></i>
+              We give you guides to protect and care for your plants.
+            </p>
+            <p class="about__details-description">
+              <i class="ri-checkbox-fill about__details-icon"></i>
+              We always come over for a check-up after sale.
+            </p>
+            <p class="about__details-description">
+              <i class="ri-checkbox-fill about__details-icon"></i>
+              100% money back guaranteed.
+            </p>
+          </div>
+
+          <a href="#" class="button--link button--flex">
+            Shop Now <i class="ri-arrow-right-down-line button__icon"></i>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <!--==================== STEPS ====================-->
+    <!-- <section class="steps section container">
+      <div class="steps__bg">
+        <h2 class="section__title-center steps__title">
+          Steps to start your <br> plants off right
+        </h2>
+
+        <div class="steps__container grid">
+          <div class="steps__card">
+            <div class="steps__card-number">01</div>
+            <h3 class="steps__card-title">Choose Plant</h3>
+            <p class="steps__card-description">
+              We have several varieties plants you can choose from.
+            </p>
+          </div>
+
+          <div class="steps__card">
+            <div class="steps__card-number">02</div>
+            <h3 class="steps__card-title">Place an order</h3>
+            <p class="steps__card-description">
+              Once your order is set, we move to the next step which is the shipping.
+            </p>
+          </div>
+
+          <div class="steps__card">
+            <div class="steps__card-number">03</div>
+            <h3 class="steps__card-title">Get plants delivered</h3>
+            <p class="steps__card-description">
+              Our delivery process is easy, you receive the plant direct to your door.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section> -->
+  </main>
+
+  <!--==================== FOOTER ====================-->
+  <!-- <footer class="footer section">
+    <div class="footer__container container grid">
+      <div class="footer__content">
+        <a href="#" class="footer__logo">
+          <i class="ri-leaf-line footer__logo-icon"></i> Plantex
+        </a>
+
+        <h3 class="footer__title">
+          Subscribe to our newsletter <br> to stay update
+        </h3>
+
+        <div class="footer__subscribe">
+          <input type="email" placeholder="Enter your email" class="footer__input">
+
+          <button class="button button--flex footer__button">
+            Subscribe
+            <i class="ri-arrow-right-up-line button__icon"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer__content">
+        <h3 class="footer__title">Contact Us</h3>
+
+        <ul class="footer__data">
+          <li class="footer__information">+91 92277 64793</li>
+          <li class="footer__information">janitkapdiya@gmail.com</li>
+        </ul>
+      </div>
+
+      <div class="footer__content">
+        <h3 class="footer__title">Social Links</h3>
+
+        <ul class="footer__data">
+
+          <div class="footer__social">
+            <a href="https://www.facebook.com/" class="footer__social-link">
+              <i class="ri-facebook-fill"></i>
+            </a>
+            <a href="https://www.instagram.com/" class="footer__social-link">
+              <i class="ri-instagram-line"></i>
+            </a>
+            <a href="https://twitter.com/" class="footer__social-link">
+              <i class="ri-twitter-fill"></i>
+            </a>
+          </div>
+        </ul>
+      </div>
+    </div> -->
+
+    <p class="footer__copy">&#169; Janit Kapadiya. All rigths reserved</p>
+  </footer>
+
+  <!--=============== SCROLL UP ===============-->
+  <a href="#" class="scrollup" id="scroll-up">
+    <i class="ri-arrow-up-fill scrollup__icon"></i>
+  </a>
+
+  <!--=============== SCROLL REVEAL ===============-->
+  <script src="assets/js/scrollreveal.min.js"></script>
+
+  <!--=============== MAIN JS ===============-->
+  <script src="assets/js/main.js"></script>
 </body>
+</body>
+
 </html>
