--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
           <i class="ri-close-line"></i>
         </div>
       </div>
+
+      <div class="nav__btns">
+        <div class="nav__toggle" id="nav-toggle">
+            <i class="ri-menu-line"></i>
+        </div>
+    </div>
+
     </nav>
   </header>
 
@@ -71,17 +78,17 @@
         </div>
 
         <div class="home__social">
-          <span class="home__social-follow">Follow Us</span>
+          <span class="home__social-follow">Follow Me</span>
 
           <div class="home__social-links">
-            <a href="https://www.facebook.com/" target="_blank" class="home__social-link">
-              <i class="ri-facebook-fill"></i>
-            </a>
             <a href="https://www.instagram.com/" target="_blank" class="home__social-link">
               <i class="ri-instagram-line"></i>
             </a>
             <a href="https://twitter.com/" target="_blank" class="home__social-link">
-              <i class="ri-twitter-fill"></i>
+              <i class="ri-twitter-line"></i>
+            </a>
+            <a href="https://twitter.com/" target="_blank" class="home__social-link">
+              <i class="ri-github-line"></i>
             </a>
           </div>
         </div>
@@ -95,7 +102,7 @@
 
         <div class="about__data">
           <h2 class="section__title about__title">
-            Who we really are & <br> why choose us
+            hello world!<br>I'm Janit Kapadiya
           </h2>
 
           <p class="about__description">
