--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!--=============== REMIX ICONS ===============-->
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-  
+
   <!--=============== CSS ===============-->
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -34,10 +34,7 @@
             <a href="#about" class="nav__link">About</a>
           </li>
           <li class="nav__item">
-            <a href="#products" class="nav__link">Products</a>
-          </li>
-          <li class="nav__item">
-            <a href="#faqs" class="nav__link">FAQs</a>
+            <a href="#products" class="nav__link">Practical</a>
           </li>
           <li class="nav__item">
             <a href="#contact" class="nav__link">Contact Us</a>
@@ -51,9 +48,9 @@
 
       <div class="nav__btns">
         <div class="nav__toggle" id="nav-toggle">
-            <i class="ri-menu-line"></i>
+          <i class="ri-menu-line"></i>
         </div>
-    </div>
+      </div>
 
     </nav>
   </header>
@@ -69,11 +66,11 @@
             Only practice<br> makes perfect
           </h1>
           <p class="home__description">
-            Create incredible plant design for your offices or apastaments.
-            Add fresness to your new ideas.
+            Join me in exploring various coding practical & projects that 
+            showcase how practice leads to mastery.
           </p>
-          <a href="#about" class="button button--flex">
-            Explore <i class="ri-arrow-right-down-line button__icon"></i>
+          <a href="https://github.com/janitkapdiya/learning-to-code" target="_blank" class="button--link button--flex">
+            Go to GitHub<i class="ri-github-line button__icon"></i>
           </a>
         </div>
 
@@ -106,32 +103,9 @@
           </h2>
 
           <p class="about__description">
-            We have over 4000+ unbiased reviews and our customers
-            trust our plant process and delivery service every time
+            I completed a diploma in computer engineering. Currently, I am pursuing a B.Tech in AI, which has been an exciting journey.
+            Alongside my studies, I am continuously learning to code, enhancing my skills and working on various projects to apply my knowledge.
           </p>
-
-          <div class="about__details">
-            <p class="about__details-description">
-              <i class="ri-checkbox-fill about__details-icon"></i>
-              We always deliver on time.
-            </p>
-            <p class="about__details-description">
-              <i class="ri-checkbox-fill about__details-icon"></i>
-              We give you guides to protect and care for your plants.
-            </p>
-            <p class="about__details-description">
-              <i class="ri-checkbox-fill about__details-icon"></i>
-              We always come over for a check-up after sale.
-            </p>
-            <p class="about__details-description">
-              <i class="ri-checkbox-fill about__details-icon"></i>
-              100% money back guaranteed.
-            </p>
-          </div>
-
-          <a href="#" class="button--link button--flex">
-            Shop Now <i class="ri-arrow-right-down-line button__icon"></i>
-          </a>
         </div>
       </div>
     </section>
@@ -170,6 +144,64 @@
         </div>
       </div>
     </section> -->
+
+    <!--==================== CONTACT ====================-->
+    <section class="contact section container" id="contact">
+      <div class="contact__container grid">
+        <div class="contact__box">
+          <h2 class="section__title">
+            Reach out to us today <br> via any of the given <br> information
+          </h2>
+
+          <div class="contact__data">
+            <div class="contact__information">
+              <h3 class="contact__subtitle">Call us for instant support</h3>
+              <span class="contact__description">
+                <i class="ri-phone-line contact__icon"></i>
+                +91 92277 64793
+              </span>
+            </div>
+
+            <div class="contact__information">
+              <h3 class="contact__subtitle">Write us by mail</h3>
+              <span class="contact__description">
+                <i class="ri-mail-line contact__icon"></i>
+                janitkapdiya@gmail.com
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <form action="" class="contact__form">
+          <div class="contact__inputs">
+            <div class="contact__content">
+              <input type="name" placeholder=" " class="contact__input " required>
+              <label for="" class="contact__label">Name</label>
+            </div>
+            
+            <div class="contact__content">
+              <input type="email" placeholder=" " class="contact__input" required>
+              <label for="" class="contact__label">Email</label>
+            </div>
+
+            <div class="contact__content">
+              <input type="text" placeholder=" " class="contact__input" required>
+              <label for="" class="contact__label">Subject</label>
+            </div>
+
+            <div class="contact__content contact__area">
+              <textarea name="message" placeholder=" " class="contact__input" required></textarea>
+              <label for="" class="contact__label">Message</label>
+            </div>
+          </div>
+
+          <button class="button button--flex">
+            Send Message
+            <i class="ri-arrow-right-up-line button__icon"></i>
+          </button>
+        </form>
+      </div>
+    </section>
   </main>
 
   <!--==================== FOOTER ====================-->
@@ -223,7 +255,7 @@
       </div>
     </div> -->
 
-    <p class="footer__copy">&#169; Janit Kapadiya. All rigths reserved</p>
+  <p class="footer__copy">&#169; Janit Kapadiya. All rigths reserved</p>
   </footer>
 
   <!--=============== SCROLL UP ===============-->
