--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
     </section>
 
     <!--==================== STEPS ====================-->
-    <!-- <section class="steps section container">
+    <section class="steps section container">
       <div class="steps__bg">
         <h2 class="section__title-center steps__title">
-          Steps to start your <br> plants off right
+          HyperText Markup Language
         </h2>
 
         <div class="steps__container grid">
@@ -124,6 +124,10 @@
             <p class="steps__card-description">
               We have several varieties plants you can choose from.
             </p>
+
+            <a href="" target="_blank" class="practical-button-link button--flex">
+              Go to Practical 1<i class="ri-arrow-right-up-line practical-icon"></i>
+            </a>
           </div>
 
           <div class="steps__card">
@@ -132,6 +136,10 @@
             <p class="steps__card-description">
               Once your order is set, we move to the next step which is the shipping.
             </p>
+
+            <a href="" target="_blank" class="practical-button-link button--flex">
+              Go to Practical 1<i class="ri-arrow-right-up-line practical-icon"></i>
+            </a>
           </div>
 
           <div class="steps__card">
@@ -140,10 +148,14 @@
             <p class="steps__card-description">
               Our delivery process is easy, you receive the plant direct to your door.
             </p>
+
+            <a href="" target="_blank" class="practical-button-link button--flex">
+              Go to Practical 1<i class="ri-arrow-right-up-line practical-icon"></i>
+            </a>
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!--==================== CONTACT ====================-->
     <section class="contact section container" id="contact">
