--- a/index.html
+++ b/index.html
@@ -120,37 +120,37 @@
         <div class="steps__container grid">
           <div class="steps__card">
             <div class="steps__card-number">01</div>
-            <h3 class="steps__card-title">Choose Plant</h3>
+            <h3 class="steps__card-title">Practical 1</h3>
             <p class="steps__card-description">
-              We have several varieties plants you can choose from.
+              This is my first webpage :)
             </p>
 
-            <a href="" target="_blank" class="practical-button-link button--flex">
-              Go to Practical 1<i class="ri-arrow-right-up-line practical-icon"></i>
+            <a href="learning-to-code/Learn-HTML-and-CSS/1-welcome-and-first-step/1.0-hello-world.html" target="_blank" class="practical-button-link button--flex">
+              Go to Practical<i class="ri-arrow-right-up-line practical-icon"></i>
             </a>
           </div>
 
           <div class="steps__card">
             <div class="steps__card-number">02</div>
-            <h3 class="steps__card-title">Place an order</h3>
+            <h3 class="steps__card-title">Practical 2.0</h3>
             <p class="steps__card-description">
-              Once your order is set, we move to the next step which is the shipping.
+              In this practical, I learn about heading. 
             </p>
 
-            <a href="" target="_blank" class="practical-button-link button--flex">
-              Go to Practical 1<i class="ri-arrow-right-up-line practical-icon"></i>
+            <a href="learning-to-code/Learn-HTML-and-CSS/2-html-fundamentals/2.0-heading-tag.html" target="_blank" class="practical-button-link button--flex">
+              Go to Practical<i class="ri-arrow-right-up-line practical-icon"></i>
             </a>
           </div>
 
           <div class="steps__card">
             <div class="steps__card-number">03</div>
-            <h3 class="steps__card-title">Get plants delivered</h3>
+            <h3 class="steps__card-title">Practical 2.1</h3>
             <p class="steps__card-description">
-              Our delivery process is easy, you receive the plant direct to your door.
+              In this practical, I learn about paragraph.
             </p>
 
-            <a href="" target="_blank" class="practical-button-link button--flex">
-              Go to Practical 1<i class="ri-arrow-right-up-line practical-icon"></i>
+            <a href="learning-to-code/Learn-HTML-and-CSS/2-html-fundamentals/2.1-paragraph-tag.html" target="_blank" class="practical-button-link button--flex">
+              Go to Practical<i class="ri-arrow-right-up-line practical-icon"></i>
             </a>
           </div>
         </div>
