--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a href="#about" class="nav__link">About</a>
           </li>
           <li class="nav__item">
-            <a href="#products" class="nav__link">Practical</a>
+            <a href="#practical" class="nav__link">Practical</a>
           </li>
           <li class="nav__item">
             <a href="#contact" class="nav__link">Contact Us</a>
@@ -78,13 +78,13 @@
           <span class="home__social-follow">Follow Me</span>
 
           <div class="home__social-links">
-            <a href="https://www.instagram.com/" target="_blank" class="home__social-link">
+            <a href="https://www.instagram.com/janitkapadiya" target="_blank" class="home__social-link">
               <i class="ri-instagram-line"></i>
             </a>
-            <a href="https://twitter.com/" target="_blank" class="home__social-link">
+            <a href="https://twitter.com/janitkapadiya" target="_blank" class="home__social-link">
               <i class="ri-twitter-line"></i>
             </a>
-            <a href="https://twitter.com/" target="_blank" class="home__social-link">
+            <a href="https://github.com/janitkapdiya" target="_blank" class="home__social-link">
               <i class="ri-github-line"></i>
             </a>
           </div>
@@ -111,7 +111,7 @@
     </section>
 
     <!--==================== STEPS ====================-->
-    <section class="steps section container">
+    <section class="steps section container" id="practical">
       <div class="steps__bg">
         <h2 class="section__title-center steps__title">
           HyperText Markup Language
@@ -153,6 +153,44 @@
               Go to Practical<i class="ri-arrow-right-up-line practical-icon"></i>
             </a>
           </div>
+
+          <div class="steps__card">
+            <div class="steps__card-number">04</div>
+            <h3 class="steps__card-title">Practical 2.2</h3>
+            <p class="steps__card-description">
+              In this practical, I learn about comment.
+            </p>
+
+            <a href="learning-to-code/Learn-HTML-and-CSS/2-html-fundamentals/2.2-comments-tag.html" target="_blank" class="practical-button-link button--flex">
+              Go to Practical<i class="ri-arrow-right-up-line practical-icon"></i>
+            </a>
+          </div>
+
+          <div class="steps__card">
+            <div class="steps__card-number">05</div>
+            <h3 class="steps__card-title">Practical 2.3</h3>
+            <p class="steps__card-description">
+              In this practical, I learn about bold & italic text.
+            </p>
+
+            <a href="learning-to-code/Learn-HTML-and-CSS/2-html-fundamentals/2.3-bold-and-italics-tag.html" target="_blank" class="practical-button-link button--flex">
+              Go to Practical<i class="ri-arrow-right-up-line practical-icon"></i>
+            </a>
+          </div>
+
+          <div class="steps__card">
+            <div class="steps__card-number">06</div>
+            <h3 class="steps__card-title">Practical 2.4</h3>
+            <p class="steps__card-description">
+              In this practical, I learn about ordered & unordered list.
+            </p>
+
+            <a href="learning-to-code/Learn-HTML-and-CSS/2-html-fundamentals/2.4-ordered-and-unordered-list.html" target="_blank" class="practical-button-link button--flex">
+              Go to Practical<i class="ri-arrow-right-up-line practical-icon"></i>
+            </a>
+          </div>
+
+
         </div>
       </div>
     </section>
