--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="#practical" class="nav__link">Practicals</a>
           </li>
           <li class="nav__item">
-            <a href="#contact" class="nav__link">Contact Us</a>
+            <a href="#contact" class="nav__link">Contact Me</a>
           </li>
         </ul>
 
