Learn HTML and CSS

--- a/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/challenges/challenge-1.html
+++ b/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/challenges/challenge-1.html
@@ -11,12 +11,12 @@
     <header class="main-header">
       <h1>📗 The Code Magazine</h1>
 
-      <div>
+      <nav>
         <a href="testing.html">Blog</a>
         <a href="testing.html">Challenges</a>
         <a href="testing.html">Flexbox</a>
         <a href="testing.html">CSS Grid</a>
-      </div>
+      </nav>
     </header>
 
     <div>
