Update in Index

--- a/index.html
+++ b/index.html
@@ -222,6 +222,28 @@
             </a>
           </div>
     </section>
+    
+    <!--==================== STEPS ====================-->
+    <section class="steps section container" id="practical">
+      <div class="steps__bg">
+        <h2 class="section__title-center steps__title">
+          Cascading Style Sheets 
+        </h2>
+
+        <div class="steps__container grid">
+          <div class="steps__card">
+            <div class="steps__card-number">01</div>
+            <h3 class="steps__card-title">Practical 1</h3>
+            <p class="steps__card-description">
+              This is my first webpage :)
+            </p>
+
+            <a href="learning-to-code/Learn-HTML-and-CSS/1-welcome-and-first-step/1.0-hello-world.html" target="_blank"
+              class="practical-button-link button--flex">
+              Go to Practical<i class="ri-arrow-right-up-line practical-icon"></i>
+            </a>
+          </div>
+    </section>
 
     <!-- 
       <div class="steps__card">
