--- a/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/challenges/challenge-2.html
+++ b/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/challenges/challenge-2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTML - Challenge 2</title>
+    <title>HTML and CSS - Challenge 2</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
 
