Update in Index

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </h2>
 
           <p class="about__description">
-            I completed a diploma in computer engineering. Currently, I am pursuing a B.Tech in AI, which has been an
+            I completed a diploma in computer engineering. Currently, I am pursuing a Bachelor in Big Data Analytics, which has been an
             exciting journey.
             Alongside my studies, I am continuously learning to code, enhancing my skills and working on various
             projects to apply my knowledge.
