--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     </section>
     
     <!--==================== STEPS ====================-->
-    <section class="steps section container" id="practical">
+    <section class="steps section container">
       <div class="steps__bg">
         <h2 class="section__title-center steps__title">
           Cascading Style Sheets 
