Learn HTML and CSS

--- a/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/challenges/challenge-2.html
+++ b/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/challenges/challenge-2.html
@@ -4,41 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML and CSS - Challenge 2</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
-
   <body>
-    <header>
-      <h2 class="product__title">Converse Chuck Taylor All Star Low Top</h2>
+    <div class="container">
+      <header>
+        <h2 class="product__title">Converse Chuck Taylor All Star Low Top</h2>
 
-      <img
-        src="https://raw.githubusercontent.com/jonasschmedtmann/html-css-course/master/starter/02-HTML-Fundamentals/challenges.jpg"
-        width="250px"
-      />
-    </header>
+        <img
+          src="https://raw.githubusercontent.com/jonasschmedtmann/html-css-course/master/starter/02-HTML-Fundamentals/challenges.jpg"
+          width="250px"
+        />
+      </header>
 
-    <article>
-      <h3>$65.00</h3>
+      <article>
+        <h3>$65.00</h3>
 
-      <p class="product__highlight">Free Shipping</p>
+        <p class="product__highlight">Free Shipping</p>
 
-      <p>
-        Ready to dress up or down, these classic canvas Chucks are an eveyday
-        wardrobe staple.
-      </p>
+        <p>
+          Ready to dress up or down, these classic canvas Chucks are an eveyday
+          wardrobe staple.
+        </p>
 
-      <a href="testing.html">More information →</a>
-    </article>
+        <a href="testing.html">More information →</a>
+      </article>
 
-    <aside>
-      <h3 class="product__details">Product details</h3>
-      <ul type="Square">
-        <li>Lightweight, durable canvas sneaker</li>
-        <li>Lightly padded footbed for added comfort</li>
-        <li>Iconic Chuck Taylor ankle patch</li>
-      </ul>
+      <aside>
+        <h3 class="product__details">Product details</h3>
+        <ul type="Square">
+          <li>Lightweight, durable canvas sneaker</li>
+          <li>Lightly padded footbed for added comfort</li>
+          <li>Iconic Chuck Taylor ankle patch</li>
+        </ul>
 
-      <button class="button">Add to cart</button>
-    </aside>
+        <button class="button">Add to cart</button>
+      </aside>
+    </div>
   </body>
 </html>
