Learn HTML and CSS

--- a/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/challenges/challenge-1.html
+++ b/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/challenges/challenge-1.html
@@ -127,8 +127,10 @@
       </aside>
 
       <footer>
-        <p class="copy">Copyright &copy; 2027 by The Code-Magazine</p>
+        <p class="copy">Copyright &copy; 2024 by The Code-Magazine</p>
       </footer>
+      
+      <button class="like__button">👍</button>
     </div>
   </body>
 </html>
