Learn HTML and CSS

--- a/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/challenges/challenge-2.html
+++ b/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/challenges/challenge-2.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <p class="sale__tag">SALE</p>
     <div class="container">
       <header>
         <h2 class="product__title">Converse Chuck Taylor All Star Low Top</h2>
@@ -29,6 +30,15 @@
 
         <a href="testing.html">More information →</a>
       </article>
+
+      <div class="color__sample">
+        <div class="black__color"></div>
+        <div class="blue__color"></div>
+        <div class="red__color"></div>
+        <div class="yellow__color"></div>
+        <div class="green__color"></div>
+        <div class="brown__color"></div>
+      </div>
 
       <aside>
         <h3 class="product__details">Product details</h3>
