--- a/learning-to-code/Learn-HTML-and-CSS/2-html-fundamentals/2.4-ordered-and-unordered-list.html
+++ b/learning-to-code/Learn-HTML-and-CSS/2-html-fundamentals/2.4-ordered-and-unordered-list.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Order and Unordered List</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Order and Unordered List</title>
+  </head>
+  <body>
     <ol type="1">
       <li>Milk</li>
       <li>Butter</li>
@@ -31,5 +31,5 @@
       <li>USA</li>
       <li>Canada</li>
     </ul>
-</body>
+  </body>
 </html>
