--- a/learning-to-code/Learn-HTML-and-CSS/2-html-fundamentals/2.2-comments-tag.html
+++ b/learning-to-code/Learn-HTML-and-CSS/2-html-fundamentals/2.2-comments-tag.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Comment Tag</title>
-</head>
-<body>
-  <!--Heading--> <!--👈 This is a Comment Tag-->
-  <h2>This is a Heading.</h2> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Comment Tag</title>
+  </head>
+  <body>
+    <!--Heading-->
+    <!--👈 This is a Comment Tag-->
+    <h2>This is a Heading.</h2>
 
-  <!--Paragarph--> <!--👈 This is a Comment Tag-->
-  <p>This is a Paragarph.</p>
-</body>
+    <!--Paragarph-->
+    <!--👈 This is a Comment Tag-->
+    <p>This is a Paragarph.</p>
+  </body>
 </html>
