--- a/learning-to-code/Learn-HTML-and-CSS/2-html-fundamentals/2.6-hyperlink.html
+++ b/learning-to-code/Learn-HTML-and-CSS/2-html-fundamentals/2.6-hyperlink.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hyperlink</title>
-</head>
-<body>
-  <a href="https://google.com">Google.com</a>
-  <a href="https://google.com" target="_blank">Google.com</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hyperlink</title>
+  </head>
+  <body>
+    <a href="https://google.com">Google.com</a>
+    <a href="https://google.com" target="_blank">Google.com</a>
+  </body>
 </html>
