--- a/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/3.1-internel-css.html
+++ b/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/3.1-internel-css.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Internal CSS</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Internal CSS</title>
 
-  <style>
-    h1{
-      color: brown;
-    }
+    <style>
+      h1 {
+        color: brown;
+      }
 
-    p{
-      color: rosybrown;
-    }
-  </style>
-</head>
-<body>
-  <h1>This is Heading</h1>
-  <p>This is a Paragraph using Internal CSS</p>
-</body>
+      p {
+        color: rosybrown;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>This is Heading</h1>
+    <p>This is a Paragraph using Internal CSS</p>
+  </body>
 </html>
