--- a/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/challenges/testing.html
+++ b/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/challenges/testing.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Testing</title>
-  <style>
-    body{
-      font-family: sans-serif;
-      font-weight: bold;
-    }
-  </style>
-</head>
-<body>
-  <h1>This is a Testing Page</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Testing</title>
+    <style>
+      body {
+        font-family: sans-serif;
+        font-weight: bold;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>This is a Testing Page</h1>
+  </body>
 </html>
