Learn HTML and CSS

--- a/learning-to-code/Learn-HTML-and-CSS/4-layouts-funamentals/challenges/challenge-2.html
+++ b/learning-to-code/Learn-HTML-and-CSS/4-layouts-funamentals/challenges/challenge-2.html
@@ -15,15 +15,16 @@
         <img
           src="https://raw.githubusercontent.com/jonasschmedtmann/html-css-course/master/starter/02-HTML-Fundamentals/challenges.jpg"
           width="250px"
+          class="product__image"
         />
       </header>
 
-      <article>
-        <h3>$65.00</h3>
+      <div class="product__info">
+        <h3 class="product__price">$65.00</h3>
 
         <p class="product__highlight">Free Shipping</p>
 
-        <p>
+        <p class="product__description">
           Ready to dress up or down, these classic canvas Chucks are an eveyday
           wardrobe staple.
         </p>
@@ -38,17 +39,16 @@
           <div class="green__color"></div>
           <div class="brown__color"></div>
         </div>
-      </article>
+      </div>
 
-      <aside>
+      <div class="other__details">
         <h3 class="product__details">Product details</h3>
         <ul type="Square">
           <li>Lightweight, durable canvas sneaker</li>
           <li>Lightly padded footbed for added comfort</li>
           <li>Iconic Chuck Taylor ankle patch</li>
         </ul>
-
-      </aside>
+      </div>
       <button class="button">Add to cart</button>
     </div>
   </body>
